--- a/BD2-Lab3.ipynb
+++ b/BD2-Lab3.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "id": "1a26b222-9330-4d63-adda-4956716a6ca9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "id": "f9e4b189-428c-4e8c-8b58-a11389507c5b",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "id": "cfdc9490",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "id": "ad90cd64",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "(1000, 17)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "id": "28f7a7f9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "4  10:37      Ewallet  604.17                 4.761905       30.2085     5.3  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "id": "69ab2a38",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "999  618.38                 4.761905       30.9190     6.6  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "id": "ece77b95",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "id": "ff986f28",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
        "0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "id": "b1b4cf19-9daa-4b97-86c2-d56bcfb33cf3",
    "metadata": {},
    "outputs": [],
@@ -621,13 +621,401 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "id": "b319ad6d-2680-4217-851b-4cfc33916fee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cargar el archivo CSV\n",
     "df = pd.read_csv('ventas_supermercado.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6df0dabe",
+   "metadata": {},
+   "source": [
+    "### Visualizar los cambios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d0f94750",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID de Factura</th>\n",
+       "      <th>Sucursal</th>\n",
+       "      <th>Ciudad</th>\n",
+       "      <th>Tipo de Cliente</th>\n",
+       "      <th>Genero</th>\n",
+       "      <th>Linea de Producto</th>\n",
+       "      <th>Precio Unitario</th>\n",
+       "      <th>Cantidad</th>\n",
+       "      <th>Impuesto</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Hora</th>\n",
+       "      <th>Metodo de Pago</th>\n",
+       "      <th>Costo de Bienes Vendidos (COGS)</th>\n",
+       "      <th>Porcentaje de Margen Bruto</th>\n",
+       "      <th>Ingreso Bruto</th>\n",
+       "      <th>Calificacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>750-67-8428</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Yangon</td>\n",
+       "      <td>Member</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Health and beauty</td>\n",
+       "      <td>74.69</td>\n",
+       "      <td>7</td>\n",
+       "      <td>26.1415</td>\n",
+       "      <td>548.9715</td>\n",
+       "      <td>1/5/2019</td>\n",
+       "      <td>13:08</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>522.83</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>26.1415</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>226-31-3081</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Naypyitaw</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Electronic accessories</td>\n",
+       "      <td>15.28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.8200</td>\n",
+       "      <td>80.2200</td>\n",
+       "      <td>3/8/2019</td>\n",
+       "      <td>10:29</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>76.40</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>3.8200</td>\n",
+       "      <td>9.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>631-41-3108</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Yangon</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Home and lifestyle</td>\n",
+       "      <td>46.33</td>\n",
+       "      <td>7</td>\n",
+       "      <td>16.2155</td>\n",
+       "      <td>340.5255</td>\n",
+       "      <td>3/3/2019</td>\n",
+       "      <td>13:23</td>\n",
+       "      <td>Credit card</td>\n",
+       "      <td>324.31</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>16.2155</td>\n",
+       "      <td>7.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>123-19-1176</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Yangon</td>\n",
+       "      <td>Member</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Health and beauty</td>\n",
+       "      <td>58.22</td>\n",
+       "      <td>8</td>\n",
+       "      <td>23.2880</td>\n",
+       "      <td>489.0480</td>\n",
+       "      <td>1/27/2019</td>\n",
+       "      <td>20:33</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>465.76</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>23.2880</td>\n",
+       "      <td>8.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>373-73-7910</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Yangon</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Sports and travel</td>\n",
+       "      <td>86.31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30.2085</td>\n",
+       "      <td>634.3785</td>\n",
+       "      <td>2/8/2019</td>\n",
+       "      <td>10:37</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>604.17</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>30.2085</td>\n",
+       "      <td>5.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ID de Factura Sucursal     Ciudad Tipo de Cliente  Genero  \\\n",
+       "0   750-67-8428        A     Yangon          Member  Female   \n",
+       "1   226-31-3081        C  Naypyitaw          Normal  Female   \n",
+       "2   631-41-3108        A     Yangon          Normal    Male   \n",
+       "3   123-19-1176        A     Yangon          Member    Male   \n",
+       "4   373-73-7910        A     Yangon          Normal    Male   \n",
+       "\n",
+       "        Linea de Producto  Precio Unitario  Cantidad  Impuesto     Total  \\\n",
+       "0       Health and beauty            74.69         7   26.1415  548.9715   \n",
+       "1  Electronic accessories            15.28         5    3.8200   80.2200   \n",
+       "2      Home and lifestyle            46.33         7   16.2155  340.5255   \n",
+       "3       Health and beauty            58.22         8   23.2880  489.0480   \n",
+       "4       Sports and travel            86.31         7   30.2085  634.3785   \n",
+       "\n",
+       "       Fecha   Hora Metodo de Pago  Costo de Bienes Vendidos (COGS)  \\\n",
+       "0   1/5/2019  13:08        Ewallet                           522.83   \n",
+       "1   3/8/2019  10:29           Cash                            76.40   \n",
+       "2   3/3/2019  13:23    Credit card                           324.31   \n",
+       "3  1/27/2019  20:33        Ewallet                           465.76   \n",
+       "4   2/8/2019  10:37        Ewallet                           604.17   \n",
+       "\n",
+       "   Porcentaje de Margen Bruto  Ingreso Bruto  Calificacion  \n",
+       "0                    4.761905        26.1415           9.1  \n",
+       "1                    4.761905         3.8200           9.6  \n",
+       "2                    4.761905        16.2155           7.4  \n",
+       "3                    4.761905        23.2880           8.4  \n",
+       "4                    4.761905        30.2085           5.3  "
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "5a3a4c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID de Factura</th>\n",
+       "      <th>Sucursal</th>\n",
+       "      <th>Ciudad</th>\n",
+       "      <th>Tipo de Cliente</th>\n",
+       "      <th>Genero</th>\n",
+       "      <th>Linea de Producto</th>\n",
+       "      <th>Precio Unitario</th>\n",
+       "      <th>Cantidad</th>\n",
+       "      <th>Impuesto</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Hora</th>\n",
+       "      <th>Metodo de Pago</th>\n",
+       "      <th>Costo de Bienes Vendidos (COGS)</th>\n",
+       "      <th>Porcentaje de Margen Bruto</th>\n",
+       "      <th>Ingreso Bruto</th>\n",
+       "      <th>Calificacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>233-67-5758</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Naypyitaw</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Health and beauty</td>\n",
+       "      <td>40.35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0175</td>\n",
+       "      <td>42.3675</td>\n",
+       "      <td>1/29/2019</td>\n",
+       "      <td>13:46</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>40.35</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>2.0175</td>\n",
+       "      <td>6.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>303-96-2227</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Mandalay</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Home and lifestyle</td>\n",
+       "      <td>97.38</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48.6900</td>\n",
+       "      <td>1022.4900</td>\n",
+       "      <td>3/2/2019</td>\n",
+       "      <td>17:16</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>973.80</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>48.6900</td>\n",
+       "      <td>4.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>727-02-1313</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Yangon</td>\n",
+       "      <td>Member</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Food and beverages</td>\n",
+       "      <td>31.84</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.5920</td>\n",
+       "      <td>33.4320</td>\n",
+       "      <td>2/9/2019</td>\n",
+       "      <td>13:22</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>31.84</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>1.5920</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>347-56-2442</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Yangon</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Home and lifestyle</td>\n",
+       "      <td>65.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.2910</td>\n",
+       "      <td>69.1110</td>\n",
+       "      <td>2/22/2019</td>\n",
+       "      <td>15:33</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>65.82</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>3.2910</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>849-09-3807</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Yangon</td>\n",
+       "      <td>Member</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Fashion accessories</td>\n",
+       "      <td>88.34</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30.9190</td>\n",
+       "      <td>649.2990</td>\n",
+       "      <td>2/18/2019</td>\n",
+       "      <td>13:28</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>618.38</td>\n",
+       "      <td>4.761905</td>\n",
+       "      <td>30.9190</td>\n",
+       "      <td>6.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ID de Factura Sucursal     Ciudad Tipo de Cliente  Genero  \\\n",
+       "995   233-67-5758        C  Naypyitaw          Normal    Male   \n",
+       "996   303-96-2227        B   Mandalay          Normal  Female   \n",
+       "997   727-02-1313        A     Yangon          Member    Male   \n",
+       "998   347-56-2442        A     Yangon          Normal    Male   \n",
+       "999   849-09-3807        A     Yangon          Member  Female   \n",
+       "\n",
+       "       Linea de Producto  Precio Unitario  Cantidad  Impuesto      Total  \\\n",
+       "995    Health and beauty            40.35         1    2.0175    42.3675   \n",
+       "996   Home and lifestyle            97.38        10   48.6900  1022.4900   \n",
+       "997   Food and beverages            31.84         1    1.5920    33.4320   \n",
+       "998   Home and lifestyle            65.82         1    3.2910    69.1110   \n",
+       "999  Fashion accessories            88.34         7   30.9190   649.2990   \n",
+       "\n",
+       "         Fecha   Hora Metodo de Pago  Costo de Bienes Vendidos (COGS)  \\\n",
+       "995  1/29/2019  13:46        Ewallet                            40.35   \n",
+       "996   3/2/2019  17:16        Ewallet                           973.80   \n",
+       "997   2/9/2019  13:22           Cash                            31.84   \n",
+       "998  2/22/2019  15:33           Cash                            65.82   \n",
+       "999  2/18/2019  13:28           Cash                           618.38   \n",
+       "\n",
+       "     Porcentaje de Margen Bruto  Ingreso Bruto  Calificacion  \n",
+       "995                    4.761905         2.0175           6.2  \n",
+       "996                    4.761905        48.6900           4.4  \n",
+       "997                    4.761905         1.5920           7.7  \n",
+       "998                    4.761905         3.2910           4.1  \n",
+       "999                    4.761905        30.9190           6.6  "
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   },
   {
@@ -640,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "id": "9599d39a",
    "metadata": {},
    "outputs": [
@@ -800,7 +1188,7 @@
        "max        49.650000      10.00000  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
